--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^7.24",
         "laravel/passport": "^9.4",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "2.4",
         "laravelcollective/html": "^6.1",
         "morilog/jalali": "3.*"
     },
@@ -25,7 +26,6 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
-        "laravel/ui": "^2.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
